Adds API and daemon endpoints for listed routes.
This adds routes for:
* version-tags
* revisions
* trust (for-actor)
* capabilities (for-object)

Fixes openapi generation path.
